--- a/compose.yml
+++ b/compose.yml
@@ -40,8 +40,10 @@ services:
       - "465:465" # SMTPS (implicit TLS)
       - "587:587" # SMTP submission (STARTTLS)
       - "993:993" # IMAPS (secure IMAP for clients)
-      - "80:8080" # Stalwart admin UI / API (change host port if 8080 is busy)
+      - "8081:8080" # Stalwart admin UI / API (change host port if 8081 is busy)
     volumes:
       - ./stalwart/config:/opt/stalwart/config
       - ./stalwart/data:/opt/stalwart/data
       - ./stalwart/logs:/opt/stalwart/log
+    labels:
+      - traefik.http.services.stalwart-admin.loadbalancer.server.port=8080 # let external proxies (Traefik/Coolify) reach the admin UI
