fix: modified traefik labels to access admin ui without port specifying

--- a/compose.yml
+++ b/compose.yml
@@ -46,12 +46,12 @@ services:
       - ./stalwart/data:/opt/stalwart/data
       - ./stalwart/logs:/opt/stalwart/log
     labels:
-      - traefik.enable=true
-      - traefik.http.services.stalwart-admin.loadbalancer.server.port=8080 # let external proxies (Traefik/Coolify) reach the admin UI
-      - traefik.http.routers.stalwart-admin.rule=Host(`mail.ipuniverse.org`) # adjust host or remove if Traefik is not in use
-      - traefik.http.routers.stalwart-admin.entrypoints=http
-      - traefik.http.routers.stalwart-admin.service=stalwart-admin
-      - traefik.http.routers.stalwart-admin-https.rule=Host(`mail.ipuniverse.org`)
-      - traefik.http.routers.stalwart-admin-https.entrypoints=https
-      - traefik.http.routers.stalwart-admin-https.tls=true
-      - traefik.http.routers.stalwart-admin-https.service=stalwart-admin
+      traefik.enable: "true"
+      traefik.http.services.stalwart-admin.loadbalancer.server.port: "8080" # let external proxies reach the admin UI
+      traefik.http.routers.stalwart-admin.rule: "Host(`mail.ipuniverse.org`)" # adjust host or remove if Traefik is not in use
+      traefik.http.routers.stalwart-admin.entrypoints: http
+      traefik.http.routers.stalwart-admin.service: stalwart-admin
+      traefik.http.routers.stalwart-admin-https.rule: "Host(`mail.ipuniverse.org`)"
+      traefik.http.routers.stalwart-admin-https.entrypoints: https
+      traefik.http.routers.stalwart-admin-https.tls: "true"
+      traefik.http.routers.stalwart-admin-https.service: stalwart-admin
