--- a/compose.yml
+++ b/compose.yml
@@ -9,6 +9,11 @@ services:
       TZ: Etc/UTC
     volumes:
       - ./postgres/data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U stalwart -d stalwart"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   mail:
     image: stalwartlabs/stalwart:latest
@@ -32,8 +37,10 @@ services:
       - STALWART__ADMIN__USERNAME=admin
       - STALWART__ADMIN__PASSWORD=change_me_admin
       - SERVICE_URL_MAIL_8080=/
+      - STALWART__ADMIN__TLS__ENABLE=false
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     expose:
       - "8080" # expose admin UI to the internal proxy network
     ports:
@@ -45,3 +52,13 @@ services:
       - ./stalwart/config:/opt/stalwart/config
       - ./stalwart/data:/opt/stalwart/data
       - ./stalwart/logs:/opt/stalwart/log
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "timeout 5 bash -c 'until nc -z localhost 8080; do sleep 1; done'",
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
