--- a/compose.yml
+++ b/compose.yml
@@ -32,6 +32,8 @@ services:
       - STALWART__ADMIN__BIND=0.0.0.0:8080
       - STALWART__ADMIN__USERNAME=admin
       - STALWART__ADMIN__PASSWORD=change_me_admin
+      - STALWART__ADMIN__TLS__ENABLE=false
+      - SERVICE_URL_MAIL_8080
     depends_on:
       - postgres
     ports:
@@ -39,7 +41,6 @@ services:
       - "465:465"
       - "587:587"
       - "993:993"
-      - "8081:8080"
     volumes:
       - ./stalwart/config:/opt/stalwart/config
       - ./stalwart/data:/opt/stalwart/data
