--- a/compose.yml
+++ b/compose.yml
@@ -3,39 +3,50 @@ services:
     image: postgres:15-alpine
     restart: unless-stopped
     environment:
-      POSTGRES_DB: stalwart
-      POSTGRES_USER: stalwart
-      POSTGRES_PASSWORD: "${MAIL_DB_PASSWORD:-stalwart_pass}"
-      TZ: Etc/UTC
+      - POSTGRES_USER=$SERVICE_USER_POSTGRES
+      - POSTGRES_PASSWORD=$SERVICE_PASSWORD_POSTGRES
+      - "POSTGRES_DB=${POSTGRES_DB:-stalwart}"
+      - "TZ=${TZ:-Etc/UTC}"
     volumes:
       - ./postgres/data:/var/lib/postgresql/data
+    healthcheck:
+      test:
+        - CMD-SHELL
+        - 'pg_isready -U "$${POSTGRES_USER}" -d "$${POSTGRES_DB}"'
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   mail:
     image: stalwartlabs/stalwart:latest
     restart: unless-stopped
     hostname: mail.ipuniverse.org
     environment:
-      - $SERVICE_FDQN_MAIL_8080
-      - TZ=Etc/UTC
-      - STALWART__STORE__DIRECTORY__TYPE=postgres
-      - STALWART__STORE__DIRECTORY__URI=postgres://stalwart:${MAIL_DB_PASSWORD:-stalwart_pass}@postgres:5432/stalwart
-      - STALWART__STORE__QUEUE__TYPE=postgres
-      - STALWART__STORE__QUEUE__URI=postgres://stalwart:${MAIL_DB_PASSWORD:-stalwart_pass}@postgres:5432/stalwart
-      - STALWART__STORE__MAILBOX__TYPE=postgres
-      - STALWART__STORE__MAILBOX__URI=postgres://stalwart:${MAIL_DB_PASSWORD:-stalwart_pass}@postgres:5432/stalwart
-      - STALWART__STORE__LOOKUP__TYPE=postgres
-      - STALWART__STORE__LOOKUP__URI=postgres://stalwart:${MAIL_DB_PASSWORD:-stalwart_pass}@postgres:5432/stalwart
-      - STALWART__STORE__ENVELOPES__TYPE=postgres
-      - STALWART__STORE__ENVELOPES__URI=postgres://stalwart:${MAIL_DB_PASSWORD:-stalwart_pass}@postgres:5432/stalwart
-      - STALWART__SERVER__PRIMARY_DOMAIN=ipuniverse.org
-      - STALWART__SERVER__HOSTNAME=mail.ipuniverse.org
-      - STALWART__ADMIN__BIND=0.0.0.0:8080
-      - STALWART__ADMIN__USERNAME=admin
-      - STALWART__ADMIN__PASSWORD=change_me_admin
-      - STALWART__ADMIN__TLS__ENABLE=false
+      - SERVICE_FQDN_MAIL
+      - SERVICE_FQDN_MAIL_8080
+      - SERVICE_URL_MAIL
       - SERVICE_URL_MAIL_8080
+      - "TZ=${TZ:-Etc/UTC}"
+      - STALWART__STORE__DIRECTORY__TYPE=postgres
+      - 'STALWART__STORE__DIRECTORY__URI=postgres://$SERVICE_USER_POSTGRES:$SERVICE_PASSWORD_POSTGRES@postgres:5432/${POSTGRES_DB:-stalwart}'
+      - STALWART__STORE__QUEUE__TYPE=postgres
+      - 'STALWART__STORE__QUEUE__URI=postgres://$SERVICE_USER_POSTGRES:$SERVICE_PASSWORD_POSTGRES@postgres:5432/${POSTGRES_DB:-stalwart}'
+      - STALWART__STORE__MAILBOX__TYPE=postgres
+      - 'STALWART__STORE__MAILBOX__URI=postgres://$SERVICE_USER_POSTGRES:$SERVICE_PASSWORD_POSTGRES@postgres:5432/${POSTGRES_DB:-stalwart}'
+      - STALWART__STORE__LOOKUP__TYPE=postgres
+      - 'STALWART__STORE__LOOKUP__URI=postgres://$SERVICE_USER_POSTGRES:$SERVICE_PASSWORD_POSTGRES@postgres:5432/${POSTGRES_DB:-stalwart}'
+      - STALWART__STORE__ENVELOPES__TYPE=postgres
+      - 'STALWART__STORE__ENVELOPES__URI=postgres://$SERVICE_USER_POSTGRES:$SERVICE_PASSWORD_POSTGRES@postgres:5432/${POSTGRES_DB:-stalwart}'
+      - STALWART__SERVER__PRIMARY_DOMAIN=ipuniverse.org
+      - 'STALWART__SERVER__HOSTNAME=${STALWART_SERVER_HOSTNAME:-mail.ipuniverse.org}'
+      - STALWART__ADMIN__BIND=0.0.0.0:8080
+      - 'STALWART__ADMIN__USERNAME=${STALWART_ADMIN_USERNAME:-admin}'
+      - 'STALWART__ADMIN__PASSWORD=${STALWART_ADMIN_PASSWORD:-change_me_admin}'
+      - STALWART__ADMIN__TLS__ENABLE=false
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     ports:
       - "25:25"
       - "465:465"
